Gemfile.lock update

--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -51,37 +51,38 @@
 			<p class="biblio">(In <b>BOLD</b> are standard abbreviations used in the field for reference, though entries are listed by authors' or editors' last names, by US MLA 8th edition conventions)</p>
 
 			<ol class="biblio">
-					<li class="biblio">Accademia della Crusca. Vocabolario della Crusca. 11 vols. Galileiana M. Cellini,1863-19. http://vocabolario.signum.sns.it/</li>
+					<li class="biblio">Accademia della Crusca. <cite>Vocabolario della Crusca</cite>. 11 vols. Galileiana M. Cellini,1863-19. http://vocabolario.signum.sns.it/</li>
 					<li class="biblio"><b>ARLIMA </b>(Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.http://www.arlima.net/. Last consulted 21 November 2012.</li>
 					<li class="biblio"><b>ARTFL</b> (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey. http://artfl-project.uchicago.edu/ ). Last consulted 21 November 2012. DEAF Baldinger, Kurt, et al.</li>
-					<li class="biblio"><b>DEAF</b>: Dictionnaire étymologique de l’ancien français. Niemeyer, 1974-. http://www.deaf-page.de/index.htm</li>
-					<li class="biblio">Battaglia, Salvatore. Grande dizionario della lingua italiana. 21 vols. Gen. Ed., Giorgio Bárberi Squarotti. UTET, 1961-.</li>
-					<li class="biblio"><b>DEI</b> Battisti, Carlo, and G. Alessio. Dizionario etimologico italiano. G. Barbera, 1950-57.</li>
-					<li class="biblio"><b>TLIO</b> Beltrami, Pietro G., dir. Tesoro della Lingua Italiana delle Origini. http://tlio.ovi.cnr.it/TLIO/ (part of ARTFL databases (http://artfl-project.uchicago.edu/content/ovi-search-form in the US).</li>
-					<li class="biblio">Bloch, O., and W. von Wartburg. Dictionnaire étymologique de la langue française. 2 vols. PUF, 1932.</li>
-					<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. Conseils pour l’édition des textes médiévaux. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
-					<li class="biblio">Brambilla Ageno, Franca. L'Edizione critica dei testi volgari. Antenore, 1975.</li>
-					<li class="biblio">DELI Cortelazzo, Manlio, and Paolo Zolli. Dizionario etimologico della lingua italiana. Zanichelli, 1979-85.</li>
-					<li class="biblio">Desole, Corinna. Repertorio ragionato dei personaggi citati nei principali cantari cavallerschi italiani. Edizioni dell’Orso, 1995.</li>
-					<li class="biblio">DuCange, Domino, et. al. Glossarium mediæ et infimæ latinitatis. L. Favre, 1883-1887.</li>
+					<li class="biblio"><b>DEAF</b>: <cite>Dictionnaire étymologique de l’ancien français</cite>. Niemeyer, 1974-. http://www.deaf-page.de/index.htm</li>
+					<li class="biblio">Battaglia, Salvatore. <cite>Grande dizionario della lingua italiana</cite>. 21 vols. Gen. Ed., Giorgio Bárberi Squarotti. UTET, 1961-.</li>
+					<li class="biblio"><b>DEI</b> Battisti, Carlo, and G. Alessio. <cite>Dizionario etimologico italiano</cite>. G. Barbera, 1950-57.</li>
+					<li class="biblio"><b>TLIO</b> Beltrami, Pietro G., dir. <cite>Tesoro della Lingua Italiana delle Origini</cite>. http://tlio.ovi.cnr.it/TLIO/ (part of ARTFL databases (http://artfl-project.uchicago.edu/content/ovi-search-form in the US).</li>
+					<li class="biblio">Bloch, O., and W. von Wartburg. <cite>Dictionnaire étymologique de la langue française</cite>. 2 vols. PUF, 1932.</li>
+					<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. <cite>Conseils pour l’édition des textes médiévaux</cite>. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
+					<li class="biblio">Brambilla Ageno, Franca. <cite>L'Edizione critica dei testi volgari</cite>. Antenore, 1975.</li>
+					<li class="biblio">DELI Cortelazzo, Manlio, and Paolo Zolli. <cite>Dizionario etimologico della lingua italiana</cite>. Zanichelli, 1979-85.</li>
+					<li class="biblio">Desole, Corinna. <cite>Repertorio ragionato dei personaggi citati nei principali cantari cavallerschi italiani</cite>. Edizioni dell’Orso, 1995.</li>
+					<li class="biblio">DuCange, Domino, et. al. <cite>Glossarium mediæ et infimæ latinitatis</cite>. L. Favre, 1883-1887.</li>
 					<li class="biblio"><b>FIOLA</b> (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau. http://loyolanotredamelib.org/fiola/. Last consulted 21 November 2012.</li>
-					<li class="biblio">Flutre, Ferdinand. Table des noms propres avec toutes leur variantes, figurant dans les romans du moyen âge écrits en français ou en provençal et actuellement publiés ou analysés. Champion, 1966.</li>
-					<li class="biblio">Foulet, Alfred, and Mary Blakely Speer. On Editing Old French Texts. Regents Press of Kansas, 1979.</li>
-					<li class="biblio">Godefroy, Frédéric. Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
-					<li class="biblio">Greimas, Algirdas Julien. Dictionnaire de l’ancien français. Larousse, 1992. (multiple editions).</li>
-					<li class="biblio">Hindley, Alan, Frederick W. Langley, and Brian J. Levy. Old French-English Dictionary. Cambridge UP, 2006.</li>
-					<li class="biblio">Lepage, Yvan G. Guide de l’édition de textes en ancien français. Champion, 2001.</li>
-					<li class="biblio"><b>REW</b> Meyer-Lübke, Wilhelm. Romanisches etymologisches Wörterbuch. Winter, 1911 (and other editions). Available through http://archive.org/details/romanischesetymo00meyeuoft.</li>
-					<li class="biblio">Modern Language Association of America. Guidelines for Editors of Scholarly Editions. Revised 29 June 2011. http://www.mla.org/Guidelines for Editors of Scholarly Editions. Last consulted 08/09/2017.</li>
-					<li class="biblio">Moisan, André. Répertoire des noms propres de personnes et de lieux cités dans les chansons de geste françaises et les œuvres étrangères dérivées. 5 vols. Massot, 1986.</li>
-					<li class="biblio"><b>LEI</b> Pfister, Max, et al. Lessico etimologico italiano. Reichert, 1984-.</li>
-					<li class="biblio">Pope, Mildred K. From Latin to Modern French with Especial Consideration of Anglo-Norman. Phonology and Morphology. Manchester UP, 1934.</li>
-					<li class="biblio"><b>RIALFrI</b> (Repertorio informatizzato antica letteratura franco-italiana). Dir. Francesca Gambino, Università di Padova. http://www.rialfri.eu/rialfriWP/. Last consulted 21 November 2012.</li>
-					<li class="biblio">Rohlfs, Gerhard. Grammatica storica della lingua italiana e dei suoi dialetti. 3 vols. Einaudi, 1966.</li>
-					<li class="biblio">Tobler, Adolf. Altfranzösisches Wörterbuch. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002. TL Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63. (Sample at http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm.)</li>
-					<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. Conseils pour l’édition des textes médiévaux. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
-					<li class="biblio"><b>FEW</b> Wartburg, Walther von. Französisches etymologisches Wörterbuch. 25 vols. + Supp. F. Klopp, 1921-.</li>
-					<li class="biblio">Zaccarello, Michelangelo. L'edizione critica del testo letterario. Primo corso di filologia italiana. Le Monnier, 2017.</li>
+					<li class="biblio">Flutre, Ferdinand. <cite>Table des noms propres avec toutes leur variantes, figurant dans les romans du moyen âge écrits en français ou en provençal et actuellement publiés ou analysés</cite>. Champion, 1966.</li>
+					<li class="biblio">Foulet, Alfred, and Mary Blakely Speer. <cite>On Editing Old French Texts</cite>. Regents Press of Kansas, 1979.</li>
+					<li class="biblio">Godefroy, Frédéric. <cite>Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s</cite>. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
+					<li class="biblio">Greimas, Algirdas Julien. <cite>Dictionnaire de l’ancien français</cite>. Larousse, 1992. (multiple editions).</li>
+					<li class="biblio">Hindley, Alan, Frederick W. Langley, and Brian J. Levy. <cite>Old French-English Dictionary</cite>. Cambridge UP, 2006.</li>
+					<li class="biblio">Lepage, Yvan G. <cite>Guide de l’édition de textes en ancien français</cite>. Champion, 2001.</li>
+					<li class="biblio"><b>REW</b> Meyer-Lübke, Wilhelm. <cite>Romanisches etymologisches Wörterbuch</cite>. Winter, 1911 (and other editions). Available through http://archive.org/details/romanischesetymo00meyeuoft.</li>
+					<li class="biblio">Modern Language Association of America. <cite>Guidelines for Editors of Scholarly Editions</cite>. Revised 29 June 2011. http://www.mla.org/Guidelines for Editors of Scholarly Editions. Last consulted 08/09/2017.</li>
+					<li class="biblio">Moisan, André. <cite>Répertoire des noms propres de personnes et de lieux cités dans les chansons de geste françaises et les œuvres étrangères dérivées</cite>. 5 vols. Massot, 1986.</li>
+					<li class="biblio"><b>LEI</b> Pfister, Max, et al. <cite>Lessico etimologico italiano</cite>. Reichert, 1984-.</li>
+					<li class="biblio">Pope, Mildred K. <cite>From Latin to Modern French with Especial Consideration of Anglo-Norman</cite>. Phonology and Morphology. Manchester UP, 1934.</li>
+					<li class="biblio"><b>RIALFrI</b> (<cite>Repertorio informatizzato antica letteratura franco-italiana</cite>). Dir. Francesca Gambino, Università di Padova. http://www.rialfri.eu/rialfriWP/. Last consulted 21 November 2012.</li>
+					<li class="biblio">Rohlfs, Gerhard. <cite>Grammatica storica della lingua italiana e dei suoi dialetti</cite>. 3 vols. Einaudi, 1966.</li>
+					<li class="biblio">Tobler, Adolf. <cite>Altfranzösisches Wörterbuch</cite>. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002.</li>
+					<li class="biblio"><b>TL</b> Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63. (Sample at http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm.)</li>
+					<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. <cite>Conseils pour l’édition des textes médiévaux</cite>. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
+					<li class="biblio"><b>FEW</b> Wartburg, Walther von. <cite>Französisches etymologisches Wörterbuch</cite>. 25 vols. + Supp. F. Klopp, 1921-.</li>
+					<li class="biblio">Zaccarello, Michelangelo. <cite>L'edizione critica del testo letterario. Primo corso di filologia italiana</cite>. Le Monnier, 2017.</li>
 			</ol>
 
 		</div>
