--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -51,8 +51,8 @@
 <!-- Introduction Cell -->
     <div class="row">
         <div class="col-12">
-            <p class="ms-intro-h3">Introduction to Edition</p>
-            <p><%= @introduction %></p>
+            <p class="ms-intro-h1">Introduction to Edition</p>
+            <p class="ms-resp"><%= @introduction %></p>
         </div>
     </div>
 
