--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -36,9 +36,11 @@
 	width: 96%;
 }
 
-.col-12 {
+/** Why is a font size necessary here?
+ .col-12 {
 	font-size: 40px;
 }
+**/ 
 
 .col-1-sm {
 	width: 4.33%;
@@ -647,6 +649,12 @@ teiHeader {
 	display: none;
 }
 
+l {
+  display: block;
+  padding-left: 2em;
+  text-indent: -2em;
+}
+
 /*dropdown/side menus*/
 
 ul li ul {
@@ -972,7 +980,7 @@ li.ms-toc {
 p.ms-intro-h1 {
 	color: #5f0000;
 	font-weight: bolder;
-	font-size: .75em;
+	font-size: 2em;
 	margin-top: 1.5em;
 	margin-bottom: 0em;
 }
