Javascript time stamp footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,14 +30,8 @@
 
 	<div class="date-stamp">
 
-<script type="text/javascript">
-
-var m = "This page was last updated: " + document.lastModified;
-var p = m.length-8;
-document.writeln("<center>");
-document.write(m.substring(p, 0));
-document.writeln("</center>");
-
+<script language="javascript"> 
+document.write("<i>Last updated "+document.lastModified+"<I>"); 
 </script>
 
 </div>
