--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -51,37 +51,37 @@
 			<p class="biblio">(In <b>BOLD</b> are standard abbreviations used in the field for reference, though entries are listed by authors' or editors' last names, by US MLA 8th edition conventions)</p>
 
 			<ol class="biblio">
-					<li class="biblio">Accademia della Crusca. <cite>Vocabolario della Crusca</cite>. 11 vols. Galileiana M. Cellini,1863-19. http://vocabolario.signum.sns.it/</li>
-					<li class="biblio"><b>ARLIMA </b>(Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.http://www.arlima.net/. Last consulted 21 November 2012.</li>
-					<li class="biblio"><b>ARTFL</b> (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey. http://artfl-project.uchicago.edu/ ). Last consulted 21 November 2012. DEAF Baldinger, Kurt, et al.</li>
-					<li class="biblio"><b>DEAF</b>: <cite>Dictionnaire étymologique de l’ancien français</cite>. Niemeyer, 1974-. http://www.deaf-page.de/index.htm</li>
+					<li class="biblio"><a class="biblio" class=href="http://vocabolario.signum.sns.it/" target="_blank">Accademia della Crusca</a>. <cite>Vocabolario della Crusca</cite>. 11 vols. Galileiana M. Cellini, 1863-19.</li>
+					<li class="biblio"><a class="biblio" href="http://www.arlima.net/" target="_blank"><b>ARLIMA</b></a> (Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.</li>
+					<li class="biblio"><a class="biblio" href="http://artfl-project.uchicago.edu/" target="_blank"><b>ARTFL</b></a> (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey). DEAF Baldinger, Kurt, et al.</li>
+					<li class="biblio"><a class="biblio" href="http://www.deaf-page.de/index.htm" target="_blank"><b>DEAF</b></a> <cite>Dictionnaire étymologique de l’ancien français</cite>. Niemeyer, 1974-.</li>
 					<li class="biblio">Battaglia, Salvatore. <cite>Grande dizionario della lingua italiana</cite>. 21 vols. Gen. Ed., Giorgio Bárberi Squarotti. UTET, 1961-.</li>
 					<li class="biblio"><b>DEI</b> Battisti, Carlo, and G. Alessio. <cite>Dizionario etimologico italiano</cite>. G. Barbera, 1950-57.</li>
-					<li class="biblio"><b>TLIO</b> Beltrami, Pietro G., dir. <cite>Tesoro della Lingua Italiana delle Origini</cite>. http://tlio.ovi.cnr.it/TLIO/ (part of ARTFL databases (http://artfl-project.uchicago.edu/content/ovi-search-form in the US).</li>
+					<li class="biblio"><a class="biblio" href="http://tlio.ovi.cnr.it/TLIO/" target="_blank"><b>TLIO</b></a> Beltrami, Pietro G., dir. <cite>Tesoro della Lingua Italiana delle Origini</cite> (part of <a class="biblio" href="http://artfl-project.uchicago.edu/content/ovi-search-form" target="_blank">ARTFL</a> databases).</li>
 					<li class="biblio">Bloch, O., and W. von Wartburg. <cite>Dictionnaire étymologique de la langue française</cite>. 2 vols. PUF, 1932.</li>
-					<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. <cite>Conseils pour l’édition des textes médiévaux</cite>. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
+					<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. <a class="biblio" href="https://books.google.com/books?id=ZytdnyZcRqEC&lpg=PA1&dq=conseils%20pour%20l'%C3%A9dition%20fascicule%20III&pg=PA1#v=onepage&q=conseils%20pour%20l'%C3%A9dition%20fascicule%20III&f=false" target="_blank"><cite>Conseils pour l’édition des textes médiévaux</cite></a>. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
 					<li class="biblio">Brambilla Ageno, Franca. <cite>L'Edizione critica dei testi volgari</cite>. Antenore, 1975.</li>
-					<li class="biblio">DELI Cortelazzo, Manlio, and Paolo Zolli. <cite>Dizionario etimologico della lingua italiana</cite>. Zanichelli, 1979-85.</li>
+					<li class="biblio"><b>DELI</b> Cortelazzo, Manlio, and Paolo Zolli. <cite>Dizionario etimologico della lingua italiana</cite>. Zanichelli, 1979-85.</li>
 					<li class="biblio">Desole, Corinna. <cite>Repertorio ragionato dei personaggi citati nei principali cantari cavallerschi italiani</cite>. Edizioni dell’Orso, 1995.</li>
 					<li class="biblio">DuCange, Domino, et. al. <cite>Glossarium mediæ et infimæ latinitatis</cite>. L. Favre, 1883-1887.</li>
-					<li class="biblio"><b>FIOLA</b> (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau. http://loyolanotredamelib.org/fiola/. Last consulted 21 November 2012.</li>
+					<li class="biblio"><a class="biblio" href="http://loyolanotredamelib.org/fiola/" target="_blank"><b>FIOLA</b></a> (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau.</li>
 					<li class="biblio">Flutre, Ferdinand. <cite>Table des noms propres avec toutes leur variantes, figurant dans les romans du moyen âge écrits en français ou en provençal et actuellement publiés ou analysés</cite>. Champion, 1966.</li>
 					<li class="biblio">Foulet, Alfred, and Mary Blakely Speer. <cite>On Editing Old French Texts</cite>. Regents Press of Kansas, 1979.</li>
-					<li class="biblio">Godefroy, Frédéric. <cite>Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s</cite>. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
-					<li class="biblio">Greimas, Algirdas Julien. <cite>Dictionnaire de l’ancien français</cite>. Larousse, 1992. (multiple editions).</li>
+					<li class="biblio">Godefroy, Frédéric. <a class="biblio" href="http://gallica.bnf.fr/ark:/12148/bpt6k50634z" target="_blank"><cite>Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s</cite></a>. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
+					<li class="biblio">Greimas, Algirdas Julien. <a class="biblio" href="http://ducange.enc.sorbonne.fr/" target="_blank"><cite>Dictionnaire de l’ancien français</cite></a>. Larousse, 1992. (multiple editions).</li>
 					<li class="biblio">Hindley, Alan, Frederick W. Langley, and Brian J. Levy. <cite>Old French-English Dictionary</cite>. Cambridge UP, 2006.</li>
 					<li class="biblio">Lepage, Yvan G. <cite>Guide de l’édition de textes en ancien français</cite>. Champion, 2001.</li>
-					<li class="biblio"><b>REW</b> Meyer-Lübke, Wilhelm. <cite>Romanisches etymologisches Wörterbuch</cite>. Winter, 1911 (and other editions). Available through http://archive.org/details/romanischesetymo00meyeuoft.</li>
-					<li class="biblio">Modern Language Association of America. <cite>Guidelines for Editors of Scholarly Editions</cite>. Revised 29 June 2011. http://www.mla.org/Guidelines for Editors of Scholarly Editions. Last consulted 08/09/2017.</li>
+					<li class="biblio"><a class="biblio" href="http://archive.org/details/romanischesetymo00meyeuoft" target="_blank"><b>REW</b></a> Meyer-Lübke, Wilhelm. <cite>Romanisches etymologisches Wörterbuch</cite>. Winter, 1911 (and other editions).</li>
+					<li class="biblio">Modern Language Association of America. <a class="biblio" href="https://www.mla.org/Resources/Research/Surveys-Reports-and-Other-Documents/Publishing-and-Scholarship/Reports-from-the-MLA-Committee-on-Scholarly-Editions/Guidelines-for-Editors-of-Scholarly-Editions" target="_blank"><cite>Guidelines for Editors of Scholarly Editions</cite></a>. Revised 29 June 2011.</li>
 					<li class="biblio">Moisan, André. <cite>Répertoire des noms propres de personnes et de lieux cités dans les chansons de geste françaises et les œuvres étrangères dérivées</cite>. 5 vols. Massot, 1986.</li>
-					<li class="biblio"><b>LEI</b> Pfister, Max, et al. <cite>Lessico etimologico italiano</cite>. Reichert, 1984-.</li>
+					<li class="biblio"><a class="biblio" href="https://reichert-verlag.de/en/series/linguistics_series/sprachwissenschaft_lessico_etimologico_italiano" target="_blank"><b>LEI</b></a> Pfister, Max, et al. <cite>Lessico etimologico italiano</cite>. Reichert, 1984-.</li>
 					<li class="biblio">Pope, Mildred K. <cite>From Latin to Modern French with Especial Consideration of Anglo-Norman</cite>. Phonology and Morphology. Manchester UP, 1934.</li>
-					<li class="biblio"><b>RIALFrI</b> (<cite>Repertorio informatizzato antica letteratura franco-italiana</cite>). Dir. Francesca Gambino, Università di Padova. http://www.rialfri.eu/rialfriWP/. Last consulted 21 November 2012.</li>
+					<li class="biblio"><a class="biblio" href="http://www.rialfri.eu/rialfriWP/" target="_blank"><b>RIALFrI</b></a> (<cite>Repertorio informatizzato antica letteratura franco-italiana</cite>). Dir. Francesca Gambino, Università di Padova.</li>
 					<li class="biblio">Rohlfs, Gerhard. <cite>Grammatica storica della lingua italiana e dei suoi dialetti</cite>. 3 vols. Einaudi, 1966.</li>
 					<li class="biblio">Tobler, Adolf. <cite>Altfranzösisches Wörterbuch</cite>. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002.</li>
-					<li class="biblio"><b>TL</b> Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63. (Sample at http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm.)</li>
-					<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. <cite>Conseils pour l’édition des textes médiévaux</cite>. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
-					<li class="biblio"><b>FEW</b> Wartburg, Walther von. <cite>Französisches etymologisches Wörterbuch</cite>. 25 vols. + Supp. F. Klopp, 1921-.</li>
+					<li class="biblio"><a class="biblio" href="http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm." target="_blank"><b>TL</b></a> Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63.</li>
+					<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. <a class="biblio" href="https://books.google.com/books?id=T3JbuyCJKvcC&lpg=PP1&pg=PP1#v=onepage&q&f=false" target="_blank"><cite>Conseils pour l’édition des textes médiévaux</cite></a>. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
+					<li class="biblio"><a class="biblio" href="https://apps.atilf.fr/lecteurFEW/"><b>FEW</b></a> Wartburg, Walther von. <cite>Französisches etymologisches Wörterbuch</cite>. 25 vols. + Supp. F. Klopp, 1921-.</li>
 					<li class="biblio">Zaccarello, Michelangelo. <cite>L'edizione critica del testo letterario. Primo corso di filologia italiana</cite>. Le Monnier, 2017.</li>
 			</ol>
 
