--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -591,7 +591,7 @@ h2.biblio {
     color: #5f0000;
     font-weight: 600;
     line-height: 1.3;
-    margin-bottom: 1em;
+    margin-bottom: .5em;
 }
 
 li.biblio {
@@ -603,10 +603,13 @@ li.biblio {
 
 ol.biblio {
 	list-style: none;
+	margin-top: -1em;
+	margin-bottom: 3em;
 }
 
 p.biblio {
     width: auto;
+    margin-top: 0em;
 }
 
 .biblio {
