SPM comment out incomplete criteria for: T, Br, Encoding Guidelines

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -28,10 +28,10 @@
           <a class="nav" href="javascript:void(0)" class="dropbtn">Praxis</a>
           <div class="dropdown-content">
             <a class="nav" href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
-            <a class="nav" href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
+            <!-- <a class="nav" href="#"><%= link_to 'T Criteria', t_praxis_path() %></a> -->
             <a class="nav" href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
-            <a class="nav" href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
-            <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+            <!-- <a class="nav" href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a> -->
+            <!-- <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a> -->
           </div>
         </li>
 
