SPM add archiginnasio logo; organize logo files so they all start with logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,29 +2,35 @@
 
 	<div class="row">
 		<div class="col-4">
-			
-			<%= link_to( image_tag('dh_at_wandl.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %>
+
+			<%= link_to( image_tag('logo_dhwlu.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %>
 
 			<br>
 
-			<%= link_to( image_tag('neh_logo.png', :id => "neh_logo"), "https://www.neh.gov/") %>
-			
+			<%= link_to( image_tag('logo_neh.png', :id => "neh_logo"), "https://www.neh.gov/") %>
+
 		</div>
 
 		<div class="col-4">
-			
-			<%= link_to( image_tag('loyola_logo.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %>
+
+			<%= link_to( image_tag('logo_loyola.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %>
 
 			<br>
 
-			<%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
-			
+			<%= link_to( image_tag('logo_unf.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
+
 		</div>
 
 		<div class="col-4">
-			
-			<%= link_to( image_tag('marucelliana_logo.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
-			
+
+			<%= link_to( image_tag('logo_marucelliana.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+
+		</div>
+
+		<div class="col-4">
+
+			<%= link_to( image_tag('logo_archiginnasio.tif', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+
 		</div>
 	</div>
 
