--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,33 +3,33 @@
 	<div class="row">
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_dhwlu.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %>
+			<%= link_to( image_tag('logo_dhwlu.png', :id => "logo_dhwlu"), "https://digitalhumanities.wlu.edu/") %>
 
 			<br>
 
-			<%= link_to( image_tag('logo_neh.png', :id => "neh_logo"), "https://www.neh.gov/") %>
+			<%= link_to( image_tag('logo_neh.png', :id => "logo_neh"), "https://www.neh.gov/") %>
 
 		</div>
 
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_loyola.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %>
+			<%= link_to( image_tag('logo_loyola.svg', :id => "logo_loyola"), "https://www.loyola.edu/") %>
 
 			<br>
 
-			<%= link_to( image_tag('logo_unf.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
+			<%= link_to( image_tag('logo_unf.svg', :id => "logo_unf"), "https://www.unf.edu/") %>
 
 		</div>
 
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_marucelliana.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+			<%= link_to( image_tag('logo_marucelliana.png', :id => "logo_marucelliana"), "http://www.maru.firenze.sbn.it/") %>
 
 		</div>
 
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_archiginnasio.tif', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+			<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.maru.firenze.sbn.it/") %>
 
 		</div>
 	</div>
