SPM archiginnasio logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -29,7 +29,7 @@
 
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.maru.firenze.sbn.it/") %>
+			<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
 
 		</div>
 	</div>
