SPM footer edits

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-4">
 
-			<%= link_to( image_tag('logo_dhwlu.png', :id => "logo_dhwlu"), "https://digitalhumanities.wlu.edu/") %>
+			<%= link_to( image_tag('logo_wludh.png', :id => "logo_wludh"), "https://digitalhumanities.wlu.edu/") %>
 
 			<br>
 
@@ -27,12 +27,6 @@
 
 		</div>
 
-		<div class="col-4">
-
-			<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
-
-		</div>
-	</div>
 
 	<div class="date-stamp">
 
