--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,6 +1,6 @@
 /* ==== GRID SYSTEM ==== */
 /**
-*** SIMPLE GRID created by 
+*** SIMPLE GRID created by
 *** (C) ZACH COLE 2016
 **/
 
@@ -40,7 +40,7 @@
  .col-12 {
 	font-size: 40px;
 }
-**/ 
+**/
 
 .col-1-sm {
 	width: 4.33%;
@@ -197,7 +197,7 @@ body {
 	font-weight: 400;
 	line-height: 25px;
 	position: relative;
-	cursor: auto; 
+	cursor: auto;
 	width: 100%;
 	max-width: 100%;
 	overflow-x:hidden;
@@ -230,7 +230,7 @@ hr {
 	border-width: 1px 0 0;
 	clear: both;
 	margin: 1.25rem 0 1.1875rem;
-	height: 0; 
+	height: 0;
 }
 
 /*.large-offset-2 {
@@ -348,7 +348,7 @@ li a.nav, .dropbtn {
     text-decoration: none;
     font-variant: small-caps;
     letter-spacing: 0.1em;
-    font-size: 120%;	
+    font-size: 120%;
 }
 
 li a.nav:hover, .dropdown:hover .dropbtn {
@@ -461,7 +461,7 @@ p.tagline {
 
 /* Footer Main Page */
 
-img#wludh_logo {
+img#logo_wludh {
 	float: left;
 	width: 100%;
 	display: block;
@@ -469,27 +469,27 @@ img#wludh_logo {
 	margin-bottom: 3.5em;
 }
 
-img#neh_logo {
+img#logo_neh {
 	float: left;
 	width: 105%;
 	display: block;
 	margin-top: 0em;
 }
 
-img#loyola_logo {
+img#logo_loyola {
 	float:  left;
 	width: 100%;
 	margin-top: 0em;
 }
 
-img#unf_logo {
+img#logo_unf {
 	float: left;
 	width: 100%;
 	margin-top: 0em;
 	padding-bottom: 0em;
 }
 
-img#marucelliana_logo {
+img#logo_marucelliana {
 	float: left;
 	width: 70%;
 	margin-top: 0em;
@@ -947,7 +947,7 @@ header {
 
 }
 
-#unf_logo {
+#logo_unf {
 	padding-bottom: 22px;
 }
 
@@ -1216,12 +1216,12 @@ lg {
 
 #ms-image {
 	max-width: 100%;
-	height: auto; 
+	height: auto;
 	border: 3px solid #5f0000;
 	display: inline-block;
 	vertical-align: middle;
 	margin-bottom: -1em;
-	-ms-interpolation-mode: bicubic; 
+	-ms-interpolation-mode: bicubic;
 }
 
 /* CSS not yet organized */
@@ -1302,6 +1302,3 @@ ex[rend="angle"]::after{
 ex[rend="angle"]::before{
 	content: "<"
 }
-
-
-
