--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,31 @@
-<div class="container">
+<div class="row">
+	<div class="col-12">
+
+		<%= link_to( image_tag('logo_wludh.png', :id => "logo_wludh"), "https://digitalhumanities.wlu.edu/") %>
+
+
+		<%= link_to( image_tag('logo_neh.png', :id => "logo_neh"), "https://www.neh.gov/") %>
+
+
+		<%= link_to( image_tag('logo_loyola.svg', :id => "logo_loyola"), "https://www.loyola.edu/") %>
+
+	</div>
+
+	<div class="col-12">
+
+
+		<%= link_to( image_tag('logo_unf.svg', :id => "logo_unf"), "https://www.unf.edu/") %>
+
+
+		<%= link_to( image_tag('logo_marucelliana.png', :id => "logo_marucelliana"), "http://www.maru.firenze.sbn.it/") %>
+
+
+		<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
+
+	</div>
+</div>
+
+<!-- <div class="container">
 
 	<div class="row">
 		<div class="col-4">
@@ -26,6 +53,17 @@
 			<%= link_to( image_tag('logo_marucelliana.png', :id => "logo_marucelliana"), "http://www.maru.firenze.sbn.it/") %>
 
 		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-12">
+
+			<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
+
+		</div>
+	</div>
+
+-->
 
 
 	<div class="date-stamp">
