CSS edits to footer and nav

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,4 @@
 <div class="row">
-	<div class="col-12">
 
 		<%= link_to( image_tag('logo_wludh.png', :id => "logo_wludh"), "https://digitalhumanities.wlu.edu/") %>
 
@@ -9,9 +8,9 @@
 
 		<%= link_to( image_tag('logo_loyola.svg', :id => "logo_loyola"), "https://www.loyola.edu/") %>
 
-	</div>
+</div>
 
-	<div class="col-12">
+<div class="row">
 
 
 		<%= link_to( image_tag('logo_unf.svg', :id => "logo_unf"), "https://www.unf.edu/") %>
@@ -22,7 +21,6 @@
 
 		<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
 
-	</div>
 </div>
 
 <!-- <div class="container">
