--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -366,7 +366,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: lightgray;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -374,7 +374,8 @@ li.dropdown {
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+		padding-left: 12px;
+		padding-right: 12px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -495,14 +496,14 @@ img#logo_unf {
 
 img#logo_marucelliana {
 	float: left;
-	width: 20%;
+	width: 15%;
 	margin-top: 0em;
 	margin-left: 6em;
 }
 
 img#logo_archiginnasio {
 	float: left;
-	width: 20%;
+	width: 15%;
 	margin-top: 0em;
 	margin-left: 7em;
 }
