--- a/app/views/pages/versioning.erb
+++ b/app/views/pages/versioning.erb
@@ -15,14 +15,14 @@
   <h1 class="praxis">&#10081; Huon d’Auvergne Digital Archive, version 1.0.0</h1>
 
       <p>We update our website regularly with changes posting every Saturday evening.</p>
-      
+
       <p>We version our website according to the standards of Semantic Versioning, described in <a href="http://semver.org/">this document.</a></p>
 
   <h2 class="praxis">Version 1.0.0 Statement</h2>
 
-    <p>Version 1.0.0 of the Huon Digital Archive consists of a base transcription of all four Huon d’Auvergne textual witnesses. Displayed publically are 25-laisse excerpts of all four editions and the English translation. The editorial criteria used to establish the editions will evolve as the team continues its research and, for this reason, all scholars citing our work must indicate the version number. We recommend contacting us directly to inquire if corrections have been made to the segment you wish to cite. We will provide access to the development site in which the texts appear in their entirety to scholars who request it.</p>
+    <p>Version 1.0.0 of the Huon Digital Archive, published August 31, 2017, consists of a base transcription of all four Huon d’Auvergne textual witnesses. Displayed publically are 25-laisse excerpts of all four editions and the English translation. The editorial criteria used to establish the editions will evolve as the team continues its research and, for this reason, all scholars citing our work must indicate the version number. We recommend contacting us directly to inquire if corrections have been made to the segment you wish to cite. We will provide access to the development site in which the texts appear in their entirety to scholars who request it.</p>
 
-    
+
     <dl>
       <dt>The first public version (1.0.0) of the Huon d’Auvergne Digital Archive includes the following functionality:</dt>
         <dd>A representative sample segment (25-laisses) of each of the four extant versions of Huon d’Auvergne, a Franco-Italian romance epic;</dd>
