--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,24 +2,21 @@
 
 		<%= link_to( image_tag('logo_wludh.png', :id => "logo_wludh"), "https://digitalhumanities.wlu.edu/") %>
 
+		<%= link_to( image_tag('logo_loyola.svg', :id => "logo_loyola"), "https://www.loyola.edu/") %>
+
+		<%= link_to( image_tag('logo_unf.svg', :id => "logo_unf"), "https://www.unf.edu/") %>
 
 		<%= link_to( image_tag('logo_neh.png', :id => "logo_neh"), "https://www.neh.gov/") %>
-
-
-		<%= link_to( image_tag('logo_loyola.svg', :id => "logo_loyola"), "https://www.loyola.edu/") %>
 
 </div>
 
 <div class="row">
 
-
-		<%= link_to( image_tag('logo_unf.svg', :id => "logo_unf"), "https://www.unf.edu/") %>
-
-
 		<%= link_to( image_tag('logo_marucelliana.png', :id => "logo_marucelliana"), "http://www.maru.firenze.sbn.it/") %>
 
-
 		<%= link_to( image_tag('logo_archiginnasio.png', :id => "logo_archiginnasio"), "http://www.archiginnasio.it") %>
+
+		<%= link_to( image_tag('logo_tei.png', :id => "logo_tei"), "http://www.tei-c.org/index.xml") %>
 
 </div>
 
@@ -71,7 +68,7 @@
 var m = "This page was last updated: " + document.lastModified;
 var p = m.length-8;
 
-document.body.appendChild(document.createElement("center")).innerText = "Last modified: " + document.lastModified
+document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
 
 </script>
 
