--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -815,7 +815,7 @@ meta.foundation-mq-xxlarge {
 
 meta.foundation-data-attribute-namespace {
   font-family: false; }
-
+/*
 html, body {
   height: 100%; }
 
@@ -829,7 +829,7 @@ html, body {
 html,
 body {
   font-size: 100%; }
-
+*/
 
 /* moved to app.css:48
 
