update index.html.erb with new participants

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -75,7 +75,7 @@
                 <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
                 <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh">Brandon Walsh</a> (Scholars' Lab, University of Virginia)<br>
                 <a href="http://megankathleendoherty.com/">Megan Doherty</a> (Washington and Lee University)<br>
-                <a href="">Abdurrafey Khan</a> (Loyola University Chicago)
+                <a href="">Abdurrafey Khan</a>, project programmer (Loyola University Chicago)
               </div>
 
             <!-- <h5 id="sub-header">Washington and Lee Student Researchers</h4>
